bug fix: categories not collapsing in NTV

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -67,7 +67,8 @@ input::placeholder {
 .packing-list-btn > *,
 .edit-trip-btn > *, 
 #editBtn > *, 
-#deleteBtn > * {
+#deleteBtn > *,
+.select-categories > * {
     pointer-events: none;
 }
 
